Sun May 24 03:56:27 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (r_symreal): register symbol names as strings first so
	  that r_symlink always returns valid names.
	  [ruby-core:68587] [Bug #10991]

	* marshal.c (r_ivar, r_object0): now need to intern symbol names.

	* marshal.c (r_object0): compare with symbol names.

Sun May 24 03:53:07 2015  Eric Wong  <e@80x24.org>

	* ext/socket/ancdata.c (bsock_recvmsg_internal): GC guard
	  [Bug #11123]

Sun May 24 03:44:42 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* range.c (linear_object_p, range_include): test if covered for
	  linear objects.  [ruby-core:69052] [Bug #11113]

Sun May 24 03:41:45 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (body_ext_mpart): should work even if body-fld-dsp
	  is omitted.  [ruby-core:69093] [Bug #11128]

Sun May 24 03:37:14 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* string.c: added documentation for character sequence \' with String#sub
	  [Bug #11132][ruby-core:69121][fix GH-900][ci skip] Patch by @shishir127

Sun May 24 03:32:53 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* rational.c: Added documentation for rational literal.
	  [Bug #11075][fix GH-885][ci skip] Patch by @shishir127

Sun May 24 03:06:20 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/ipsocket.c (init_inetsock_internal): preserve errno
	  before other library calls and use rb_syserr_fail.
	  [ruby-core:68531] [Bug #10975]

Sun May 24 03:01:17 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/-test-/printf/printf.c (uint_to_str): renamed to get rid of
	  conflict on cygwin.  [ruby-core:68877] [Bug #11065]

Sun May 24 02:44:53 2015  Koichi Sasada  <ko1@atdot.net>

	* vm.c (vm_exec): check other events when RETURN is thrown.
	  [Bug #10724]

	* test/ruby/test_settracefunc.rb: add a test.

Sun May 24 02:21:47 2015  Masahiro Tomita  <tommy@tmtm.org>

	* ext/socket/raddrinfo.c (addrinfo_mload): fix memory leak of
	  addrinfo.  [ruby-dev:48923] [Bug #11051]
