@@ -1,10 +1,10 @@
 #define RUBY_VERSION "2.2.3"
-#define RUBY_RELEASE_DATE "2015-05-24"
-#define RUBY_PATCHLEVEL 129
+#define RUBY_RELEASE_DATE "2015-06-12"
+#define RUBY_PATCHLEVEL 130
 
 #define RUBY_RELEASE_YEAR 2015
-#define RUBY_RELEASE_MONTH 5
-#define RUBY_RELEASE_DAY 24
+#define RUBY_RELEASE_MONTH 6
+#define RUBY_RELEASE_DAY 12
 
 #include "ruby/version.h"
 
